fixed bullet line spacing in foundationSimCommand.css

--- a/foundationSimCommand.css
+++ b/foundationSimCommand.css
@@ -2738,8 +2738,8 @@ ul,
 ol,
 dl {
   font-size: 1rem;
-  /*line-height: 1.6;*/
-  line-height:0.4;
+  line-height: 1.4;
+  /*line-height:0.4;*/
   margin-bottom: 1.25rem;
   list-style-position: outside;
   font-family: inherit; }
